--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "projekt_rejtelyekhaza",
   "version": "1.0.0",
+  "homepage": "https://rejtelyekhaza.netlify.app",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -32,7 +33,6 @@
       "last 1 safari version"
     ]
   }
-  {
-  "homepage": "https://rejtelyekhaza.netlify.app"
+  
   
 }
